# richard-cpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.md  isa_support.md  memory_map.md  naming_convention.md  pipeline_diagram.md
rtl/core/: alu.sv  branch_unit.sv  csr_unit.sv  decoder.sv  ex_mem_reg.sv  ex_stage.sv  hazard_unit.sv  id_ex_reg.sv  id_stage.sv  if_id_reg.sv  if_stage.sv  mem_stage.sv  mem_wb_reg.sv  regfile.sv  richard_core.sv  trap_ctrl.sv  wb_stage.sv
rtl/core/include/: csr_pkg.sv  rv64_pkg.sv
rtl/core/mmu/: tlb.sv
scripts/: gen_hex.sh  run_compliance.py  wave_view.sh
sw/: CMakeLists.txt
sw/common/: link.ld
tb/: CMakeLists.txt
tb/compliance/: CMakeLists.txt  compliance_runner.cc
tb/core/: tb_core.cc
tb/unit/: tb_alu.cc  tb_branch.cc  tb_csr.cc  tb_decoder.cc  tb_ex_mem_reg.cc  tb_ex_stage.cc  tb_hazard_unit.cc  tb_id_ex_reg.cc  tb_id_stage.cc  tb_if_id_reg.cc  tb_if_stage.cc  tb_mem_stage.cc  tb_mem_wb_reg.cc  tb_regfile.cc  tb_tlb.cc  tb_trap_ctrl.cc  tb_wb_stage.cc
tools/: toolchain-riscv64.cmake  verilator.cmake
